--- a/static-blog/package.json
+++ b/static-blog/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@tinacms/cli": "1.5.13",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
