--- a/static-blog/package.json
+++ b/static-blog/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.2.1",
+    "marked": "^5.1.0",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "tinacms": "1.5.6",
     "typescript": "^5.1.3"
   },
