--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
     "dotenv-webpack": "^8.0.1",
     "markdown-to-jsx": "^7.2.1",
     "next": "^12.0.4",
