--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@mui/material": "^5.13.6",
+    "@notionhq/client": "^2.2.7",
     "dotenv-webpack": "^8.0.1",
     "markdown-to-jsx": "^7.2.1",
     "next": "^12.0.4",
@@ -19,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
     "react-lazyload": "^3.2.0",
+    "react-toastify": "^9.1.3",
     "tinacms": "1.5.11",
     "typescript": "^5.1.3"
   },
@@ -26,7 +29,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tinacms/cli": "1.5.20",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2"
   }
 }
