--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/poppins": "^5.0.5",
     "@mui/material": "^5.13.6",
     "dotenv-webpack": "^8.0.1",
     "markdown-to-jsx": "^7.2.1",
