--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.10.1",
     "react-lazyload": "^3.2.0",
     "tinacms": "1.5.20",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "wavesurfer.js": "^7.1.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
