--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.9.0",
     "react-icons": "^4.10.1",
     "react-lazyload": "^3.2.0",
     "tinacms": "1.5.19",
