--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,10 @@
-{}
+{
+	"tabWidth": 2,
+	"useTabs": true,
+	"semi": false,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"bracketSpacing": false,
+	"arrowParens": "always",
+	"plugins": ["prettier-plugin-tailwindcss"]
+}
