--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "tinacms dev -c \"next dev\"",
     "build": "tinacms build && next build",
     "start": "tinacms build && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -26,7 +29,11 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tinacms/cli": "1.5.38",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^8.0.3",
     "postcss": "^8.4.24",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.2"
   }
 }
