--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@emotion/styled": "^11.11.0",
 		"@fontsource/poppins": "^5.0.5",
 		"@mui/material": "^5.13.6",
+		"eslint": "^8.55.0",
+		"eslint-config-next": "^14.0.4",
 		"next": "^12.0.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
