--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
 		"format": "prettier --write .",
 		"prepare": "husky install"
 	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run check-format"
+		}
+	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
