--- a/package.json
+++ b/package.json
@@ -8,13 +8,7 @@
 		"start": "tinacms build && next start",
 		"lint": "next lint",
 		"check-format": "prettier --check .",
-		"format": "prettier --write .",
-		"prepare": "husky install"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "npm run check-format"
-		}
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
@@ -37,7 +31,6 @@
 		"@tinacms/cli": "1.5.38",
 		"autoprefixer": "^10.4.14",
 		"eslint-config-prettier": "^9.1.0",
-		"husky": "^8.0.3",
 		"postcss": "^8.4.24",
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
