--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@mui/material": "^5.13.6",
 		"eslint": "^8.55.0",
 		"eslint-config-next": "^14.0.4",
+		"latest": "^0.2.0",
+		"n": "^9.2.3",
 		"next": "^12.0.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
