--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"latest": "^0.2.0",
 		"n": "^9.2.3",
 		"next": "^12.0.4",
+		"posthog-js": "^1.231.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-h5-audio-player": "^3.9.0",
