tests for tina env variables

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "tinacms dev -c \"next dev\"",
-		"build": "tinacms build && next build && next export",
+        "check:env": "node -e \"console.log('TINA_CLIENT_ID?', !!process.env.NEXT_PUBLIC_TINA_CLIENT_ID, 'TINA_TOKEN?', !!process.env.TINA_TOKEN)\"",
+        "build": "npm run check:env && tinacms build && next build && next export",
 		"start": "tinacms build && next start",
 		"lint": "next lint",
 		"check-format": "prettier --check .",
