Upgrade TinaCMS CLI and Node.js
- Upgrade @tinacms/cli from 1.5.51 to 2.0.5
- Upgrade Node.js from 16 to 20
- Update tina-lock.json to schema version 2.0.3
- Add --skip-cloud-checks flag to bypass schema validation during transition

The --skip-cloud-checks flag is temporary - it will be removed in a
follow-up PR after TinaCloud re-indexes with the new schema.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '20'
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -80,7 +80,7 @@ jobs:
           SEARCH_TOKEN: ${{ secrets.SEARCH_TOKEN }}
           NEXT_PUBLIC_POSTHOG_KEY: ${{ secrets.NEXT_PUBLIC_POSTHOG_KEY }}
           NEXT_PUBLIC_POSTHOG_HOST: ${{ secrets.NEXT_PUBLIC_POSTHOG_HOST }}
-        run: npx tinacms build
+        run: npx tinacms build --skip-cloud-checks
       - name: Build with Next.js
         env:
           NEXT_PUBLIC_POSTHOG_KEY: ${{ secrets.NEXT_PUBLIC_POSTHOG_KEY }}
