--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
 		"n": "^9.2.3",
 		"next": "^12.0.4",
 		"posthog-js": "^1.257.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-h5-audio-player": "^3.9.0",
 		"react-icons": "^5.4.0",
-		"tinacms": "2.1.0",
+		"tinacms": "^2.1.0",
 		"wavesurfer.js": "^7.4.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
-		"@tinacms/cli": "1.5.51",
+		"@tinacms/cli": "^2.0.5",
 		"autoprefixer": "^10.4.14",
 		"eslint-config-prettier": "^9.1.0",
 		"postcss": "^8.4.24",
