--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -61,7 +61,7 @@ jobs:
           TINA_PUBLIC_CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
           TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
           SEARCH_TOKEN: ${{ secrets.SEARCH_TOKEN }}
-        run: npx tinacms build --skip-cloud-checks
+        run: npx tinacms build 
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Static HTML export with Next.js
