--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"wavesurfer.js": "^7.4.2"
 	},
 	"devDependencies": {
+		"@swc/helpers": "^0.5.18",
 		"@tailwindcss/typography": "^0.5.9",
 		"@tinacms/cli": "^2.0.5",
 		"autoprefixer": "^10.4.14",
