--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
 		"build": "tinacms build && next build",
 		"start": "tinacms build && next start",
 		"lint": "next lint",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"check-format": "prettier --check .",
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@swc/helpers": "^0.5.18",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@fontsource/poppins": "^5.0.5",
 		"@mui/material": "^5.13.6",
+		"@swc/helpers": "^0.5.18",
 		"eslint": "^8.55.0",
 		"eslint-config-next": "^14.0.4",
 		"latest": "^0.2.0",
@@ -32,12 +34,16 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
+		"@testing-library/react": "^14.3.1",
 		"@tinacms/cli": "^2.0.5",
+		"@vitejs/plugin-react": "^5.1.2",
 		"autoprefixer": "^10.4.14",
 		"eslint-config-prettier": "^9.1.0",
+		"jsdom": "^27.4.0",
 		"postcss": "^8.4.24",
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"tailwindcss": "^3.3.2"
+		"tailwindcss": "^3.3.2",
+		"vitest": "^4.0.16"
 	}
 }
