--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@testing-library/react": "^14.3.1",
 		"@tinacms/cli": "^2.1.5",
 		"@vitejs/plugin-react": "^5.1.2",
+		"@vitest/coverage-v8": "^4.0.18",
 		"autoprefixer": "^10.4.14",
 		"eslint-config-prettier": "^9.1.0",
 		"jsdom": "^27.4.0",
